Fixed alignment bug on backdrop images in wide view

--- a/filmexplorer/src/styles/components/Detail/backdrop.scss
+++ b/filmexplorer/src/styles/components/Detail/backdrop.scss
@@ -12,6 +12,8 @@
 	.backdropImage {
 		// max-width: 100%;
 		object-fit: cover;
+		margin: auto;
+		// padding: 5px;
 	}
 	// vertical-align: middle;
 	// max-width: 100%;
